--- a/lib/app/l10n/app_en.arb
+++ b/lib/app/l10n/app_en.arb
@@ -5,5 +5,6 @@
   "onbtitletwo" : "Work Seamlessly",
   "onbdesctwo" : "Get your work done seamlessly without interruption",
   "onbtitlethree" : "Achieve Higher Goals",
-  "onbdescthree" : "By boosting your producivity we help you achieve higher goals"
+  "onbdescthree" : "By boosting your producivity we help you achieve higher goals",
+  "getstarted" : "Get Started"
 }
