--- a/lib/app/l10n/app_tr.arb
+++ b/lib/app/l10n/app_tr.arb
@@ -5,5 +5,6 @@
   "onbtitletwo" : "Sorunsuz Çalışın",
   "onbdesctwo" : "Kesintisiz bir şekilde işinizi yapın",
   "onbtitlethree" : "Yüksek Hedeflere Ulaşın",
-  "onbdescthree" : "Verimliliğinizi artırarak daha yüksek hedeflere ulaşmanıza yardımcı oluyoruz"
+  "onbdescthree" : "Verimliliğinizi artırarak daha yüksek hedeflere ulaşmanıza yardımcı oluyoruz",
+  "getstarted" : "Hadi Başlayalım"
 }
